# videoeditor

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PRODUCTION.md  README.md  flake.nix  justfile  release-plz.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release-plz.yml
crates/videoeditor/: CHANGELOG.md  Cargo.toml  build.rs  guide.md
crates/videoeditor-chrome/: CHANGELOG.md  Cargo.toml
crates/videoeditor-chrome/src/: grab.rs  lib.rs
crates/videoeditor-genai/: Cargo.toml
crates/videoeditor-genai/src/: google.rs  lib.rs  xai.rs
crates/videoeditor-media/: CHANGELOG.md  Cargo.toml
crates/videoeditor-media/src/: assemble.rs  lib.rs
crates/videoeditor-media/tests/: media.rs
crates/videoeditor-record/: CHANGELOG.md  Cargo.toml
crates/videoeditor-record-ui/: Cargo.toml  Trunk.toml  index.html  style.css
crates/videoeditor-record-ui/src/: api.rs  app.rs  audio.rs  lib.rs  main.rs  types.rs
crates/videoeditor-record/src/: index.html  lib.rs
crates/videoeditor-record/src/web/: index.html  style.css
crates/videoeditor-record/src/web/js/: main.js  mic.js  record.js  review.js  state.js  takes.js
crates/videoeditor-record/ui/: .source-hash  index.html  videoeditor-record-ui.js  videoeditor-record-ui_bg.wasm
crates/videoeditor-timeline/: CHANGELOG.md  Cargo.toml
crates/videoeditor-timeline/src/: lib.rs
crates/videoeditor-voice/: CHANGELOG.md  Cargo.toml
crates/videoeditor-voice/examples/: transcribe.rs
crates/videoeditor-voice/src/: elevenlabs.rs  lib.rs  piper.rs  whisper.rs
crates/videoeditor/formats/blank/: skeleton.md  spec.md
crates/videoeditor/formats/blank/assets/code/: example.rs
crates/videoeditor/formats/meme-benchmark/: skeleton.md  spec.md
crates/videoeditor/formats/meme-benchmark/assets/code/: bad.py  fancy.rs  good.rs
crates/videoeditor/src/: analyze.rs  assets.rs  catalog.rs  main.rs  pack.rs  render.rs
crates/videoeditor/templates/scenes/: code-meme.html  duel-table.html  scoreboard.html  stat-card.html  title-card.html
crates/videoeditor/templates/scenes/_lib/: meme.css  scene.js
docs/: nix.md  templates.md
e2e/: global-setup.ts  global-teardown.ts  playwright.config.ts
e2e/tests/: recorder.spec.ts
examples/hello-bench/: script.md
examples/hello-bench/assets/code/: sum.py  sum.rs
