[package]
name = "videoeditor-genai"
description = "Typed generative-asset clients for videoeditor: xAI Grok Imagine and Google Imagen stills (reference-image conditioning included)"
keywords = ["image-generation", "grok", "imagen", "genai", "video"]
categories = ["multimedia::images", "api-bindings"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
