[package]
name = "videoeditor-voice"
description = "Voice I/O for videoeditor: local piper TTS + whisper.cpp STT (default) or ElevenLabs, narration synthesis and reference transcription"
keywords = ["tts", "stt", "whisper", "narration", "video"]
categories = ["multimedia::audio", "api-bindings"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
ureq.workspace = true
videoeditor-media.workspace = true
videoeditor-timeline.workspace = true
